fix mobile logo image and fix spacing

--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@
         <div class="banner-wrapper">
             <picture>
                 <source srcset="./assets/images/mobile/logo_starbuck_vml.svg" media="(max-width: 768px)" />
-                <img class="logo" data-aos="fade-up" data-aos-duration="500"
+                <img class="logo space-btm-a" data-aos="fade-up" data-aos-duration="500"
                     src="./assets/images/desktop/logo_starbuck_vml.svg" alt="" />
             </picture>
-            <br>
-            <p class="banner-sub-main-text uppercase-text text-center" data-aos="fade-up" data-aos-duration="700">How
+            <p class="banner-sub-main-text uppercase-text text-center space-btm-c " data-aos="fade-up" data-aos-duration="700">How
                 Starbucks
                 Thailand</p>
-            <p class="banner-main-text uppercase-text space-btm text-center" data-aos="fade-up" data-aos-duration="900">
+            <p class="banner-main-text uppercase-text space-btm-b text-center" data-aos="fade-up" data-aos-duration="900">
                 Brews
                 Personalized<br>
                 Experiences at Scale</p>
@@ -493,7 +492,7 @@
         <div class="together-wrapper">
             <div class="together-container-a"></div>
             <div class="together-container">
-                <p class="block-header2-text uppercase-text space-btm" data-aos="fade-up" data-aos-duration="600">Watch
+                <p class="block-header2-text uppercase-text  space-btm-b" data-aos="fade-up" data-aos-duration="600">Watch
                     How <br>
                     It All Comes Together</p>
                 <div class="vdo" data-aos="fade-up" data-aos-duration="600">
